tp perso c'est parti !

--- a/index.html
+++ b/index.html
@@ -1,1 +1,47 @@
+<!DOCTYPE html>
+<html lang="FR-fr">
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="./style.css">
+    <title>Document</title>
+</head>
+
+<body>
+    <main>
+        <aside>
+            <div class="un">
+            <img src="./images/images.png" alt="PHOTO DE PROFIL">
+            <p>Amelia Rice <br> 2390 files</p>
+            <button>UPLOAD</button>
+            <!-- icône loupe + input de recherche -->
+            <nav>
+                <h1>CATEGORIES</h1>
+                <ul>
+                    <li><a href="#">Photos</a></li>
+                    <li><a href="#">Vidéos</a></li>
+                    <li><a href="#">Projets</a></li>
+                </ul>
+            </nav>
+            <nav>
+                <h1>ALBUMS</h1>
+                <ul>
+                    <li><a href="#">Carpathes 2016</a></li>
+                    <li><a href="#">Été 2015</a></li>
+                    <li><a href="#">Croatie 2015</a></li>
+                    <li><a href="#">Aspen 2015</a></li>
+                </ul>
+            </nav>
+            <!-- curseur avec deux icônes -->
+        </div>
+        </aside>
+        <section>
+
+        </section>
+    </main>
+
+</body>
+
+</html>
