--- a/index.html
+++ b/index.html
@@ -13,38 +13,48 @@
     <main>
         <aside>
             <div class="un">
-            <img src="./images/images.png" alt="PHOTO DE PROFIL">
-            <p>Amelia Rice <br> 2390 files</p>
-            <button>UPLOAD</button>
-            <!-- icône loupe + input de recherche -->
-            <nav>
-                <h1>CATEGORIES</h1>
-                <ul>
-                    <li><a href="#">Photos</a></li>
-                    <li><a href="#">Vidéos</a></li>
-                    <li><a href="#">Projets</a></li>
-                </ul>
-            </nav>
-            <nav>
-                <h1>ALBUMS</h1>
-                <ul>
-                    <li><a href="#">Carpathes 2016</a></li>
-                    <li><a href="#">Été 2015</a></li>
-                    <li><a href="#">Croatie 2015</a></li>
-                    <li><a href="#">Aspen 2015</a></li>
-                </ul>
-            </nav>
-            <!-- curseur avec deux icônes -->
-        </div>
+                <img src="./images/images.png" alt="PHOTO DE PROFIL">
+                <p>Amelia Rice <br> 2390 files</p>
+                <button>UPLOAD</button>
+                <!-- icône loupe + input de recherche -->
+                <nav>
+                    <h1>CATEGORIES</h1>
+                    <ul>
+                        <li><a href="#">Photos</a></li>
+                        <li><a href="#">Vidéos</a></li>
+                        <li><a href="#">Projets</a></li>
+                    </ul>
+                </nav>
+                <nav>
+                    <h1>ALBUMS</h1>
+                    <ul>
+                        <li><a href="#">Carpathes 2016</a></li>
+                        <li><a href="#">Été 2015</a></li>
+                        <li><a href="#">Croatie 2015</a></li>
+                        <li><a href="#">Aspen 2015</a></li>
+                    </ul>
+                </nav>
+                <!-- curseur avec deux icônes -->
+            </div>
         </aside>
         <section>
             <h1>Subcarpathia 2016 (8 photos)</h1>
             <article id="ligne1">
                 <figure id="un">
-
+                    <img src="./images/11223.jpg" alt="bulles">
+                    <img src="./images/2751099.jpg" alt="bulles">
+                    <img src="./images/2847278.jpg" alt="bulles">
+                    <img src="./images/2851868.jpg" alt="">
                 </figure>
-
-            </article> 
+            </article>
+            <article id="ligne2">
+                <figure id="un">
+                    <img src="./images/2847278.jpg" alt="bulles">
+                    <img src="./images/2851868.jpg" alt="bulles">
+                    <img src="./images/11223.jpg" alt="bulles">
+                    <img src="./images/2751099.jpg" alt="">
+                </figure>
+            </article>
         </section>
     </main>
 
