--- a/index.html
+++ b/index.html
@@ -55,6 +55,22 @@
                     <img src="./images/2751099.jpg" alt="">
                 </figure>
             </article>
+            <article id="ligne3">
+                <figure id="un">
+                    <img src="./images/2847278.jpg" alt="bulles">
+                    <img src="./images/2851868.jpg" alt="bulles">
+                    <img src="./images/11223.jpg" alt="bulles">
+                    <img src="./images/2751099.jpg" alt="">
+                </figure>
+            </article>
+            <article id="ligne4">
+                <figure id="un">
+                    <img src="./images/2847278.jpg" alt="bulles">
+                    <img src="./images/2851868.jpg" alt="bulles">
+                    <img src="./images/11223.jpg" alt="bulles">
+                    <img src="./images/2751099.jpg" alt="">
+                </figure>
+            </article>
         </section>
     </main>
 
